--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Charlie Santos <cusantos@globe.com.ph>",
   "license": "MIT",
   "dependencies": {
-    "vuepress": "^1.4.0"
+    "vuepress": "^1.4.0",
+    "vuepress-plugin-clean-urls": "^1.1.1"
   },
   "devDependencies": {},
   "scripts": {
