--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,4 @@ phases:
     commands:
       - npm run docs:build
       - aws s3 rm s3://sdc-docs --recursive
-      - aws s3 sync .vuepress/dist/ s3://sdc-docs/
+      - aws s3 sync docs/.vuepress/dist/ s3://sdc-docs/
