--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Charlie Santos <cusantos@globe.com.ph>",
   "license": "MIT",
   "dependencies": {
-    "vuepress": "^1.4.0",
     "vuepress-plugin-clean-urls": "^1.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "vuepress": "^1.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
