--- a/cdk/package.json
+++ b/cdk/package.json
@@ -21,6 +21,10 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-codebuild": "^1.32.2",
+    "@aws-cdk/aws-codecommit": "^1.32.2",
+    "@aws-cdk/aws-codedeploy": "^1.32.2",
+    "@aws-cdk/aws-codepipeline-actions": "^1.32.2",
     "@aws-cdk/aws-s3": "^1.32.2",
     "@aws-cdk/core": "1.32.2",
     "source-map-support": "^0.5.16"
